--- a/Form/index.html
+++ b/Form/index.html
@@ -7,6 +7,7 @@
     <title>Página de Cadastro</title>
     <script src="https://code.jquery.com/jquery-3.6.3.slim.min.js" integrity="sha256-ZwqZIVdD3iXNyGHbSYdsmWP//UBokj2FHAxKuSBKDSo=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="funcoes.js"></script>
+    <link rel="stylesheet" href="styles.css">
     
 </head>
 <body>
@@ -14,7 +15,7 @@
     <section>
         <article>
             <form name="frmCadastro" id="frmCadastro">
-                <ul>
+                <ul class="options">
                     <li>
                         <label for="txtCodigo">C&oacute;digo:</label>
                         <input type="txtCodigo" id="txtCodigo">
