--- a/Form/index.html
+++ b/Form/index.html
@@ -36,8 +36,13 @@
                 <input value="Salvar" type="submit" id="btnSalvar" name="btnSalvar">
             </form>
         </article>
+        <article>
+            <table id="tblalunos">
+
+            </table>
+        </article>
     </section>
     <aside></aside>
-    <footer>Desenvolvimeto Front-end 2</footer>
+    <footer>Desenvolvimento Front-end 2</footer>
 </body>
 </html>
